<resources>
    <string name="app_name">Vipal Siddh</string>
    <string name="symptomName">Symptom Name</string>
    <string name="nextPage">Diseases</string>
    <string name="confirm">CONFIRM SYMPTOMS</string>
    <string name="symptomsBtn">Check Your Symptoms</string>
    <string name="ChooseYourSymptoms">Choose Your Symptoms</string>
    <string name="diseases">Potential Diseases</string>
    <string name="seriousness">Seriousness</string>
    <string name="spread">Spread</string>
    <string name="potDisName">Potential Disease Name</string>
    <string name="look_for_hospitals">Look For Hospitals Nearby</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_test">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="location_request">Location Access Required</string>
    <string name="enable_location">ENABLE</string>
    <string name="cancel">CANCEL</string>
    <string name="please_wait">Please Wait...</string>
    <string name="test">Test Message</string>
    <string name="enable_text">ENABLE LOCATION</string>
    <string name="fetching_location">Locating Hospitals Nearby</string>
    <string name="doctor_instruction">In order to know the directions, click on desired clinic and then, click on the Navigate icon in the bottom right corner of the screen.</string>
    <string name="symptoms_list">Symptoms List:</string>
    <string name="self_diagnosis">Self Diagnosis</string>
    <string name="hospitals">Hospitals Nearby</string>
    <string name="HowDoYouFeel">How do you feel?\n(Choose 2-5 symptoms)</string>
    <string name="LookForSymp">Search for your symptoms</string>
    <string name="ConfirmYourSymptoms">Confirm Your Symptoms</string>
    <string name="SwipeRightToDelete">Swipe Right to Delete Any Symptom</string>
    <string name="skip"><![CDATA[SKIP >>]]></string>
    <string name="lets_get_started">LET\'S GET STARTED</string>
    <string name="very_rare">Very Rare</string>
    <string name="fairly_rare">Fairly Rare</string>
    <string name="rare">Rare</string>
    <string name="common">Common</string>
    <string name="very_common">Very Common</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="more_options">MORE OPTIONS</string>
    <string name="MoreOptions">More Options</string>
    <string name="report_bug">Report Error</string>
    <string name="terms_conditions">Terms of Usage</string>
    <string name="about">About the Developer</string>
    <string name="send_email">SEND E-MAIL</string>
    <string name="report_bug_message">Describe the error/suggestion in brief...</string>
    <string name="place_name">Place Name</string>
    <string name="place_address">Place Address</string>
    <string name="open_close">Open/Closed</string>
    <string name="show_on_map">SHOW ON MAP</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="do_not_show_again">Do not show again.</string>
    <string name="some_formalities">A few formalities...</string>
    <string name="formalities">I recommend going through the short and very basic Terms of Usage, before you proceed to use the app. Thank You!</string>
    <string name="underline_terms"><u>Terms of Usage</u></string>
    <string name="proceed">PROCEED</string>
    <string name="accepttctxt">I have gone through, and accept the Terms of Usage</string>
    <string name="vipal_siddh">Vipal Siddh</string>
    <string name="suggestion_txt">We didn\'t find any diseases matching your symptoms. Try choosing more symptoms, or related symptoms.</string>
    <string name="suggestion_txt2">If you would like to suggest addition of a disease. Suggest using the button below.</string>
    <string name="u_make_a_suggestion_u">Make a Suggestion</string>
    <string name="diseases_list">Diseases List</string>
    <string name="t_cgrid">Terms of\nUsage</string>
    <string name="dev_group">About the\nDeveloper</string>
    <string name="view_tutorial">VIEW TUTORIAL</string>
    <string name="have_any_suggestions">Have any suggestions?</string>
    <string name="let_us_know">LET US KNOW</string>
</resources>