<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SymptomsActivity"
    android:id="@+id/constraintView"
    android:background="@color/page_background">

    <LinearLayout
        android:id="@+id/txtChooseYourSympHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/txtChooseYourSymp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ChooseYourSymptoms"
            android:textSize="26sp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/txtHowDoYouFeel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/HowDoYouFeel"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white"/>

    </LinearLayout>


    <androidx.appcompat.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/symptom_search"
        android:background="@color/search_bar"
        app:queryHint="@string/LookForSymp"
        app:layout_constraintTop_toBottomOf="@id/txtChooseYourSympHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/symptomsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="filteredSymptomsList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/symptom_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:contentDescription="@string/symptoms_list"
        app:layout_constraintTop_toBottomOf="@id/symptomsRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_chosenSymptomsPage"
        android:paddingHorizontal="8dp"/>

    <Button
        android:id="@+id/btn_chosenSymptomsPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_btn_background"
        android:fontFamily="@font/montserrat"
        android:text="@string/symptomsBtn"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>