<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportBugActivity"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/page_background">

    <LinearLayout
        android:id="@+id/report_bug_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/txtReportBug"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:text="@string/report_bug"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/bug_message"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report_bug_holder"
        android:background="@drawable/btn_background"
        app:layout_constraintBottom_toTopOf="@id/report_btn"
        android:layout_margin="8dp"
        android:hint="@string/report_bug_message"
        android:gravity="top"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text_black"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/report_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="16dp"
        android:background="@drawable/background"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</LinearLayout>