<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChosenSymptomsActivity"
    android:background="@color/page_background">

    <LinearLayout
        android:id="@+id/ConfirmSympHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/txtConfirmYourSymp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ConfirmYourSymptoms"
            android:textSize="26sp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chosenSymptomsRecyclerView"
        app:layout_constraintTop_toBottomOf="@id/ConfirmSympHolder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
/>
    <Button
        android:id="@+id/btn_confirmSymptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosenSymptomsRecyclerView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_confirmSymptoms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_black"
        android:text="@string/SwipeRightToDelete"
        android:fontFamily="@font/montserrat"
        android:textSize="12sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>